--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,9 @@
+a:hover {
+  text-decoration: underline;
+}
+.no-underline {
+  text-decoration: none;
+}
 .cloud {
   width: 70px;
 }
@@ -31,7 +37,4 @@
 
 .footer {
   font-size: 15px;
-}
-a {
-  text-decoration: none;
 }
